Menu button, Javascript and Rotate

--- a/index.html
+++ b/index.html
@@ -14,36 +14,36 @@
 </head>
 
 <body id="bg-img">
-
   <header>
     <div class="menu-btn">
-      <div class="bth-line"></div>
-      <div class="bth-line"></div>
-      <div class="bth-line"></div>
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
+      <div class="btn-line"></div>
     </div>
+
     <nav class="menu">
       <div class="menu-branding">
         <div class="portrait"></div>
       </div>
       <ul class="menu-nav">
-        <li class="nav-item">
-          <a href="/" class="nav-link">
+        <li class="nav-item current">
+          <a href="index.html" class="nav-link">
             Home
           </a>
         </li>
         <li class="nav-item">
-          <a href="/about.html" class="nav-link">
+          <a href="about.html" class="nav-link">
             About Us
           </a>
         </li>
-        <li class="/nav-item">
-          <a href="/work.html" class="nav-link">
+        <li class="nav-item">
+          <a href="work.html" class="nav-link">
             Our Products and Services
           </a>
         </li>
         <li class="nav-item">
-          <a href="/Contact US" class="nav-link">
-            How to reach us
+          <a href="contact.html" class="nav-link">
+            How To Reach Us
           </a>
         </li>
       </ul>
