--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </li>
         <li class="nav-item">
           <a href="work.html" class="nav-link">
-            Our Products and Services
+            Our Products & Services
           </a>
         </li>
         <li class="nav-item">
